@@ -188,7 +188,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 					}
 					"""
 	        },
-			" -25 --enable-preview \"" + getSourceDir() +  File.separator + "module-info.java\" "
+			" -25 \"" + getSourceDir() +  File.separator + "module-info.java\" "
 	        + "\"" + getSourceDir() +  File.separator + "p/X.java\"",
 	        "",
 	        """
@@ -275,7 +275,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 					}
 					""");
 		StringBuilder commandLine = new StringBuilder();
-		commandLine.append(" -25 --enable-preview ");
+		commandLine.append(" -25 ");
 
 		runNegativeModuleTest(
 				files,
@@ -556,7 +556,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 					}
 					""");
 		StringBuilder commandLine = new StringBuilder();
-		commandLine.append(" -25 --enable-preview ");
+		commandLine.append(" -25 ");
 		commandLine.append(" --module-source-path \"").append(srcDir).append("\"");
 		commandLine.append(" -d \"").append(OUTPUT_DIR).append(File.separatorChar).append("bin").append("\"");
 
@@ -616,7 +616,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 					}
 					""");
 		StringBuilder commandLine = new StringBuilder();
-		commandLine.append(" -25 --enable-preview");
+		commandLine.append(" -25");
 		commandLine.append(" --module-source-path ").append(srcDir);
 		commandLine.append(" -d ").append(OUTPUT_DIR+File.separator+"bin");
 
@@ -675,7 +675,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 					}
 					""");
 		StringBuilder commandLine = new StringBuilder();
-		commandLine.append(" -25 --enable-preview");
+		commandLine.append(" -25");
 		commandLine.append(" --module-source-path ").append(srcDir);
 
 		runConformModuleTest(
@@ -766,7 +766,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 					import module.Z;
 					public class X extends Z {}
 					""");
-		StringBuilder commandLine = new StringBuilder(" -25 --enable-preview");
+		StringBuilder commandLine = new StringBuilder(" -25");
 		runConformModuleTest(files, commandLine, "", "");
 	}
 
@@ -785,7 +785,7 @@ public class ModuleImportTests extends AbstractModuleCompilationTest {
 						uses Z;
 					}
 					""");
-		StringBuilder commandLine = new StringBuilder(" -25 --enable-preview");
+		StringBuilder commandLine = new StringBuilder(" -25");
 		runConformModuleTest(files, commandLine, "", "");
 	}
 
